[gd_scene load_steps=11 format=3 uid="uid://cmtc1he8psiam"]

[ext_resource type="Script" path="res://scenes/Menu_Scenes/Pause_Menu/Pause_Menu.gd" id="1_8jf8v"]
[ext_resource type="Texture2D" uid="uid://bcjvsugm21al7" path="res://assets/Menu_Items/Main_Menu/Options_Button.png" id="2_3im7k"]
[ext_resource type="Texture2D" uid="uid://sln78d0832ot" path="res://assets/Menu_Items/Main_Menu/Retry_Button.png" id="3_cubu4"]
[ext_resource type="Texture2D" uid="uid://bguwm80fa8y5h" path="res://assets/Menu_Items/Main_Menu/Start_Button.png" id="4_jagbq"]
[ext_resource type="FontFile" uid="uid://bpxsbwrahbx28" path="res://assets/fonts/SevenSegment.ttf" id="6_deopy"]
[ext_resource type="Texture2D" uid="uid://srknxr48kitn" path="res://assets/Menu_Items/Main_Menu/Exit_Button.png" id="6_gchg3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_42v7q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qaq1c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kueys"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hsql0"]
texture = ExtResource("4_jagbq")

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_8jf8v")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.03125
anchor_top = -0.921296
anchor_right = 0.860243
anchor_bottom = 1.33333
offset_top = 252.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.0190972
anchor_top = -1.0
anchor_right = 1.01563
anchor_bottom = 1.32253
offset_top = 252.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/ButtonsVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start_Button" type="Button" parent="MarginContainer2/ButtonsVBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_42v7q")
icon = ExtResource("3_cubu4")
flat = true

[node name="Option_Button" type="Button" parent="MarginContainer2/ButtonsVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_qaq1c")
icon = ExtResource("2_3im7k")
flat = true

[node name="Exit_Button" type="Button" parent="MarginContainer2/ButtonsVBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_kueys")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hsql0")
icon = ExtResource("6_gchg3")
flat = true

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.035
offset_left = 373.0
offset_top = 401.0
offset_right = 762.68
offset_bottom = 457.32
theme_override_fonts/font = ExtResource("6_deopy")
theme_override_font_sizes/font_size = 75
text = "Score   0"

[node name="Colon1" type="Label" parent="."]
offset_left = 581.0
offset_top = 360.0
offset_right = 621.0
offset_bottom = 491.0
theme_override_fonts/font = ExtResource("6_deopy")
theme_override_font_sizes/font_size = 125
text = ":"
